[PAXWEB-549] Concurrency issues with the war extender